kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotnet-ingress
  namespace: dotnet-microservices
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  rules:
  - http:
      paths:

      - path: /finance
        pathType: Prefix
        backend:
          service:
            name: finance
            port:
              number: 80

      - path: /school
        pathType: Prefix
        backend:
          service:
            name: school
            port:
              number: 80

      - path: /inventory
        pathType: Prefix
        backend:
          service:
            name: inventory
            port:
              number: 80

      - path: /vivahadeepam
        pathType: Prefix
        backend:
          service:
            name: vivahadeepam
            port:
              number: 80
